Added paramaterizedTest to get user with {id}